# cohesv-ai-voice-tool

./: .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  pyproject.toml  requirements.txt
customer-lookup-server/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
customer-lookup-server/customer_lookup_server/: __init__.py  handler.py
customer-lookup-server/customer_lookup_server/core/: __init__.py  repository.py
customer-lookup-server/tests/external_services/: test_customer_lookup_server.py  test_lambda_integration.py
customer-lookup-server/tests/integration/: test_handler.py
customer-lookup-server/tests/unit/: test_repository.py
data-api-authorizer/: Dockerfile  README.md  authorizer.py  main.py  pyproject.toml
data-api-authorizer/tests/e2e/: test_authorizer_e2e.py
data-api-authorizer/tests/unit/: test_authorizer.py
data-api-server/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.deploy.txt  requirements.txt
data-api-server/src/data_api_server/: __init__.py  main.py  settings.py
data-api-server/tests/: __init__.py  test_api.py  test_middleware.py
data-api-server/tests/integration/: test_api_integration.py
data-api-server/tests/unit/: test_api.py  test_middleware.py
infrastructure/: README.md  SECRETS.md  deploy.sh
infrastructure/customer-lookup-server/: template.yaml
infrastructure/data-api-server/: template.yaml
infrastructure/ecr/: template.yaml
infrastructure/parameters/: README.md  dev.json  prod.json
infrastructure/shared/: template.yaml
infrastructure/voice-parser/: template.yaml
infrastructure/webhook-handler/: template.yaml
parse-message/tests/fixtures/: webhook_payload_audio.json
parse-message/tests/integration/: test_processor.py  test_storage_service.py  test_twilio_whatsapp_client.py
parse-message/voice_parser/: models.py
parse-message/voice_parser/core/: processor.py
put-message-in-queue/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
put-message-in-queue/tests/integration/: test_api_gateway.py
put-message-in-queue/webhook_handler/: handler.py
shared-lib/: .env.test  .env.test.example  .gitignore  README.md  pyproject.toml
shared-lib/src/ai_voice_shared/: __init__.py  models.py  settings.py
shared-lib/src/ai_voice_shared/services/: customer_lookup.py  customer_lookup_client.py  s3_service.py
shared-lib/tests/e2e/: __init__.py  test_customer_lookup_client.py  test_s3_service.py
shared-lib/tests/external_services/: test_customer_lookup_client.py  test_s3_service.py
shared-lib/tests/integration/external_services/: test_s3_service.py
shared-lib/tests/unit/: test_customer_lookup_client.py  test_models.py  test_s3_service.py  test_settings.py
src/aws_lambdas/: webhook_handler.py  webhook_verification.py
src/voice_parser/: main.py  models.py  worker_handler.py
src/voice_parser/api/routes/: webhook.py
src/voice_parser/config/: settings.py
src/voice_parser/core/: config.py  processor.py  settings.py
src/voice_parser/services/: llm.py  storage.py  transcription.py  twillio_whatsapp_client.py  whatsapp_client.py
tests/: README.md  __init__.py  pyproject.toml
tests/e2e/: .env.e2e.example  .gitignore  README.md  __init__.py  conftest.py  pytest.ini  setup.sh  test_text_message_e2e.py  test_voice_message_e2e.py
tests/e2e/fixtures/: test_customers.json
tests/e2e/utils/: __init__.py  s3_helpers.py  twilio_signature.py
tests/fixtures/: webhook_payload_audio.json  webhook_payload_text.json
tests/integration/: test_api_gateway.py  test_llm_service.py  test_processor.py  test_storage_service.py  test_transcription_service.py
tests/src/ai_voice_e2e_tests/: __init__.py
voice-parser/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.deploy.txt  requirements.txt
voice-parser/tests/e2e/: test_llm_service.py
voice-parser/tests/external_services/: test_llm_service.py  test_transcription_service.py
voice-parser/tests/fixtures/: webhook_payload_text.json
voice-parser/tests/integration/: test_processor.py
voice-parser/tests/internal_integration/: test_processor.py
voice-parser/tests/unit/: test_handler.py  test_processor.py
voice-parser/voice_parser/: handler.py  models.py  worker_handler.py
voice-parser/voice_parser/core/: processor.py  settings.py
voice-parser/voice_parser/services/: llm.py  storage.py  transcription.py  twilio_whatsapp_client.py
voice-parser/voice_parser/services/llm/: __init__.py  client.py  models.py
webhook-handler/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.deploy.txt  requirements.txt
webhook-handler/tests/e2e/: test_api_gateway.py
webhook-handler/tests/integration/: test_api_gateway.py
webhook-handler/tests/unit/: test_handler.py
webhook-handler/webhook_handler/: handler.py
