[project]
name = "customer-lookup-server"
version = "0.1.0"
description = "Customer lookup Lambda function for ai-voice-tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.66",
]

[dependency-groups]
dev = [
    "boto3>=1.40.66",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (isolated, mocked dependencies)",
    "integration: Integration tests (mocked external services, real internal logic)",
    "e2e: End-to-end tests (require deployed infrastructure)",
]
