[project]
name = "data-api-authorizer"
version = "0.1.0"
description = "Lambda authorizer for Data API - validates x-api-key header"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.71",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (isolated, mocked dependencies)",
    "e2e: End-to-end tests (require deployed infrastructure)",
]
