[project]
name = "data-api-server"
version = "0.1.0"
description = "FastAPI-based microservice for serving S3-stored voice message data"
readme = "README.md"
authors = [
    { name = "Niklas", email = "niklas@alyst.se" }
]
requires-python = ">=3.13"
dependencies = [
    "ai-voice-shared",
    "boto3>=1.40.46,<1.40.62",
    "fastapi>=0.121.0",
    "mangum>=0.19.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.3",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
ai-voice-shared = { path = "../shared-lib" }
