[project]
name = "webhook-handler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ai-voice-shared",
    "boto3>=1.40.61",
    "httpx>=0.28.1",
    "twilio>=9.8.4",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.3",
]

[tool.uv.sources]
ai-voice-shared = { path = "../shared-lib", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (isolated, mocked dependencies)",
    "integration: Integration tests (mocked external services, real internal logic)",
    "e2e: End-to-end tests (require deployed infrastructure)",
]
